--- a/requirements.txt
+++ b/requirements.txt
@@ -1,385 +1,16 @@
-absl-py==2.1.0
-accelerate==0.29.2
-addict==2.4.0
-aiohttp==3.9.1
-aiosignal==1.3.1
-aliyun-python-sdk-core==2.14.0
-aliyun-python-sdk-kms==2.16.2
-altair==5.3.0
-annotated-types==0.6.0
-anyio==4.2.0
-argon2-cffi==23.1.0
-argon2-cffi-bindings==21.2.0
-arrow==1.3.0
-asgiref==3.8.1
-asttokens==2.4.1
-astunparse==1.6.3
-async-lru==2.0.4
-async-timeout==4.0.3
-attrs==23.2.0
-Babel==2.14.0
-backoff==2.2.1
-bcrypt==4.1.3
-beautifulsoup4==4.12.2
-bleach==6.1.0
-blinker==1.7.0
-blis==0.7.11
-build==1.2.1
-cachetools==5.3.2
-catalogue==2.0.10
-certifi==2023.7.22
-cffi==1.16.0
-chardet==5.2.0
-charset-normalizer==3.2.0
-chroma-hnswlib==0.7.5
-chromadb==0.5.4
-ci-info==0.3.0
-click==8.1.7
-clip @ git+https://github.com/openai/CLIP.git@dcba3cb2e2827b402d2701e7e1c7d9fed8a20ef1
-cloudpathlib==0.16.0
-colorama==0.4.6
-coloredlogs==15.0.1
-comm==0.2.0
-confection==0.1.4
-configobj==5.0.8
-configparser==7.1.0
-contourpy==1.1.1
-crcmod==1.7
-cryptography==43.0.0
-cycler==0.11.0
-cymem==2.0.8
-Cython==0.29.33
-dataclasses-json==0.6.3
-dataclasses-json-speakeasy==0.5.11
-datasets==2.18.0
-debugpy==1.8.0
-decimer==2.5.0
-decimer-segmentation==1.3.0
-decorator==5.1.1
-deepdiff==7.0.1
-defusedxml==0.7.1
-Deprecated==1.2.14
-dill==0.3.8
-dirtyjson==1.0.8
-distinctipy==1.1.5
-distro==1.9.0
-dnspython==2.6.1
-docarray==0.40.0
-duckduckgo_search==6.2.6
-easyocr==1.7.1
-efficientnet==1.1.1
-email_validator==2.2.0
-emoji==2.11.0
-etelemetry==0.3.1
-exceptiongroup==1.1.3
-executing==2.0.1
-exsclaim==0.1.0
-faiss-cpu==1.8.0
-fastapi==0.111.1
-fastapi-cli==0.0.4
-fastjsonschema==2.19.1
-filelock==3.12.4
-filetype==1.2.0
-fitz==0.0.1.dev2
-flatbuffers==23.5.26
-fonttools==4.42.1
-fqdn==1.5.1
-frozenlist==1.4.1
-fsspec==2023.12.2
-ftfy==6.2.0
-gast==0.4.0
-gdown==4.7.3
-gitdb==4.0.11
-GitPython==3.1.43
-google-auth==2.27.0
-google-auth-oauthlib==1.0.0
-google-pasta==0.2.0
-googleapis-common-protos==1.63.2
-greenlet==3.0.3
-grpcio==1.65.1
-grpcio-tools==1.65.1
-h11==0.14.0
-h2==4.1.0
-h5py==3.10.0
-hpack==4.0.0
-htbuilder==0.6.2
-httpcore==1.0.2
-httplib2==0.22.0
-httptools==0.6.1
-httpx==0.27.0
-huggingface-hub==0.22.2
-humanfriendly==10.0
-hyperframe==6.0.1
-idna==3.4
-imageio==2.31.4
-importlib-metadata==6.8.0
-importlib-resources==6.1.0
-ipykernel==6.26.0
-ipython==8.17.2
-ipywidgets==8.1.1
-isodate==0.6.1
-isoduration==20.11.0
-itables==2.0.0
-jax==0.4.23
-jedi==0.19.1
-Jinja2==3.1.2
-jmespath==0.10.0
-joblib==1.3.2
-json5==0.9.14
-jsonpatch==1.33
-jsonpath-python==1.0.6
-jsonpointer==2.4
-jsonschema==4.20.0
-jsonschema-specifications==2023.12.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter-events==0.9.0
-jupyter-lsp==2.2.1
-jupyter_client==8.6.0
-jupyter_core==5.5.0
-jupyter_server==2.12.2
-jupyter_server_terminals==0.5.1
-jupyterlab==4.0.10
-jupyterlab-widgets==3.0.9
-jupyterlab_pygments==0.3.0
-jupyterlab_server==2.25.2
-keras==2.12.0
-Keras-Applications==1.0.8
-kiwisolver==1.4.5
-kubernetes==30.1.0
-langchain==0.2.12
-langchain-community==0.2.11
-langchain-core==0.2.28
-langchain-openai==0.1.20
-langchain-text-splitters==0.2.2
-langchainhub==0.1.20
-langcodes==3.3.0
-langdetect==1.0.9
-langsmith==0.1.93
-libclang==16.0.6
-llama-index==0.9.25.post1
-llama-index-core==0.10.58
-llama-index-vector-stores-qdrant==0.2.14
-llvmlite==0.41.1
-lmdb==1.2.1
-looseversion==1.3.0
-lxml==5.2.1
-Markdown==3.5.2
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-marshmallow==3.20.1
-matplotlib==3.8.0
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-mistune==3.0.2
-ml-dtypes==0.3.2
-mmcv-full==1.3.4
-mmdet==2.11.0
-mmh3==4.1.0
-mmpycocotools==12.0.3
-model-index==0.1.11
-monotonic==1.6
-more-itertools==10.3.0
-mpmath==1.3.0
-multidict==6.0.4
-multiprocess==0.70.16
-murmurhash==1.0.10
-mypy-extensions==1.0.0
-natsort==8.4.0
-nbclient==0.9.0
-nbconvert==7.14.0
-nbformat==5.9.2
-nest-asyncio==1.5.8
-networkx==3.1
-nibabel==5.2.1
-ninja==1.11.1.1
-nipype==1.8.6
-nltk==3.8.1
-notebook==7.0.6
-notebook_shim==0.2.3
-numba==0.58.1
-numpy==1.23.5
-oauthlib==3.2.2
-onnxruntime==1.18.1
-openai==1.36.1
-opencv-contrib-python==4.9.0.80
-opencv-python==4.8.0.76
-opencv-python-headless==4.9.0.80
-opendatalab==0.0.10
-openmim==0.3.9
-opentelemetry-api==1.25.0
-opentelemetry-exporter-otlp-proto-common==1.25.0
-opentelemetry-exporter-otlp-proto-grpc==1.25.0
-opentelemetry-instrumentation==0.46b0
-opentelemetry-instrumentation-asgi==0.46b0
-opentelemetry-instrumentation-fastapi==0.46b0
-opentelemetry-proto==1.25.0
-opentelemetry-sdk==1.25.0
-opentelemetry-semantic-conventions==0.46b0
-opentelemetry-util-http==0.46b0
-openxlab==0.0.34
-opt-einsum==3.3.0
-ordered-set==4.1.0
-orjson==3.10.1
-oss2==2.17.0
-overrides==7.4.0
-packaging==23.2
-pandas==2.1.1
-pandocfilters==1.5.0
-parso==0.8.3
-pathlib==1.0.1
-pdf2image==1.17.0
-Pillow==10.0.1
-pillow-heif==0.14.0
-platformdirs==3.10.0
--e git+https://github.com/katerinavr/pneumatic.git@240426e5b3d8b7331802bf1754b690e49e9c5594#egg=pneumatic
-portalocker==2.10.1
-posthog==3.5.0
-preshed==3.0.9
-primp==0.5.5
-prometheus-client==0.19.0
-prompt-toolkit==3.0.41
-protobuf==5.27.2
-prov==2.0.1
-psutil==5.9.6
-psycopg2-binary==2.9.9
-pure-eval==0.2.2
-pyarrow==15.0.2
-pyarrow-hotfix==0.6
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pyclipper==1.3.0.post5
-pycparser==2.21
-pycryptodome==3.20.0
-pydantic==2.5.3
-pydantic_core==2.14.6
-pydeck==0.8.1b0
-pydot==3.0.1
-Pygments==2.16.1
-PyMuPDF==1.24.9
-PyMuPDFb==1.24.9
-pyod==1.1.2
-pyparsing==3.1.1
-pypdf==4.3.0
-PyPDF2==3.0.1
-PyPika==0.48.9
-pyproject_hooks==1.1.0
-pyreadline3==3.4.1
-PySocks==1.7.1
-pystow==0.5.2
-pytesseract==0.3.13
-python-bidi==0.4.2
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-python-iso639==2024.2.7
-python-json-logger==2.0.7
-python-magic==0.4.27
-python-multipart==0.0.9
-pytorch-model-summary==0.1.2
-pytz==2023.3.post1
-PyWavelets==1.4.1
-pywin32==306
-pywinpty==2.0.12
-pyxnat==1.6.2
-PyYAML==6.0.1
-pyzmq==25.1.1
-qdrant-client==1.10.1
-qtconsole==5.5.1
-QtPy==2.4.1
-rapidfuzz==3.8.1
-rdflib==6.3.2
-rdkit-pypi==2022.9.5
-referencing==0.32.0
-regex==2023.8.8
-requests==2.31.0
-requests-oauthlib==1.3.1
-responses==0.25.0
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-rich==13.4.2
-rpds-py==0.16.2
-rsa==4.9
-safetensors==0.4.3
-scikit-image==0.18.1
-scikit-learn==0.24.1
-scipy==1.12.0
-seaborn==0.13.2
-selenium==4.19.0
-selenium-stealth==1.0.5
-selfies==2.1.1
-Send2Trash==1.8.2
-sentence-transformers==2.6.1
-shapely==2.0.2
-shellingham==1.5.4
-simplejson==3.19.3
-six==1.16.0
-smart-open==6.4.0
-smmap==5.0.1
-sniffio==1.3.0
-soupsieve==2.5
-spacy==3.7.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SQLAlchemy==2.0.25
-srsly==2.4.8
-st-annotated-text==4.0.1
-stack-data==0.6.3
-starlette==0.37.2
-streamlit==1.33.0
-sympy==1.12
-tabulate==0.9.0
-tenacity==8.2.3
-tensorboard==2.12.3
-tensorboard-data-server==0.7.2
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-intel==2.12.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.4.0
-terminado==0.18.0
-terminaltables==3.1.10
-thinc==8.2.3
-threadpoolctl==3.2.0
-tifffile==2023.9.18
-tiktoken==0.7.0
-tinycss2==1.2.1
-tokenizers==0.15.2
-toml==0.10.2
-tomli==2.0.1
-toolz==0.12.1
-torch==2.0.1
-torchaudio==2.0.2
-torchvision==0.15.2
-tornado==6.3.3
-tqdm==4.66.4
-traitlets==5.13.0
-traits==6.3.2
-transformers==4.39.3
-typer==0.12.3
-types-python-dateutil==2.8.19.14
-types-requests==2.32.0.20240712
-typing-inspect==0.9.0
-typing_extensions==4.8.0
-tzdata==2023.3
-unstructured==0.13.2
-unstructured-client==0.18.0
-uri-template==1.3.0
-urllib3==2.2.2
-uvicorn==0.30.1
-wasabi==1.1.2
-watchdog==4.0.0
-watchfiles==0.22.0
-wcwidth==0.2.13
-weasel==0.3.4
-webcolors==1.13
-webdriver-manager==4.0.1
-webencodings==0.5.1
-websocket-client==1.7.0
-websockets==12.0
-Werkzeug==3.0.1
-widgetsnbextension==4.0.9
-wrapt==1.14.1
-xxhash==3.4.1
-yapf==0.40.2
-yarl==1.9.4
-zipp==3.17.0
+numpy==1.23.*
+pandas==2.1.*
+scipy==1.12.*
+scikit-learn==0.24.*
+torch==2.0.*
+torchvision==0.15.*
+tensorflow==2.12.*
+transformers==4.39.*
+huggingface-hub==0.22.*
+Pillow==10.0.*
+opencv-python==4.8.*
+langchain==0.2.*
+fastapi==0.111.*
+requests==2.31.*
+matplotlib==3.8.*
+jupyter==1.0.*
