correcting the requirements and reruning the demo

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,18 @@
-numpy==1.23.*
-pandas==2.1.*
-scipy==1.12.*
-scikit-learn==0.24.*
+numpy
+pandas
+scipy
+scikit-learn
 torch==2.0.*
-torchvision==0.15.*
-tensorflow==2.12.*
-transformers==4.39.*
-huggingface-hub==0.22.*
-opencv-python==4.8.*
-langchain==0.2.*
-fastapi==0.111.*
-requests==2.31.*
-matplotlib==3.8.*
-jupyter==1.0.*
-Cython==3.0.12
+torchvision
 openai
 DECIMER
 rdkit
+easyocr
+ipykernel
+matplotlib
+bs4pip 
+decimer-segmentation
+python-bidi
+pyclipper
+Shapely
+PyPDF2
