--- a/requirements.txt
+++ b/requirements.txt
@@ -2,16 +2,16 @@ numpy
 pandas
 scipy
 scikit-learn
-torch==2.0.*
+torch>=2.2.0
 torchvision
 openai
-DECIMER
-rdkit
-easyocr
+DECIMER 
+rdkit 
+easyocr  
 ipykernel
 matplotlib
-bs4pip 
-decimer-segmentation
+beautifulsoup4
+decimer-segmentation 
 python-bidi
 pyclipper
 Shapely
